2009-12-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --bt-save-metadata option. When true is given, it saves
	metadata as .torrent file. This option has effect only when
	BitTorrent Magnet URI is used.  The filename is name in metadata
	with suffix .torrent. The directory to be saved is the same
	directory where download file is saved. If the same file already
	exists, metdata is not saved.
	* src/OptionHandlerFactory.cc
	* src/UTMetadataPostDownloadHandler.cc
	* src/UTMetadataPostDownloadHandler.h
	* src/message.h
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h
	* test/UTMetadataDataExtensionMessageTest.cc

2009-12-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added util::saveAs() function. Use it in Signature::save().
	* src/Signature.cc
	* src/util.cc
	* src/util.h

2009-12-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Upcase info hash in Magnet URI.
	* doc/aria2c.1.txt

2009-12-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Refactored RequestGroupMan::changeReservedGroupPosition()
	* src/RequestGroupMan.cc

2009-12-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated the description for aria2.addTorrent XML-RPC method.
	* doc/aria2c.1.txt

2009-12-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added changePosition to aria2rpc.
	* doc/xmlrpc/aria2rpc

2009-12-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented changePosition XML-RPC method in man page.
	* doc/aria2c.1.txt

2009-12-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added changePosition XML-RPC method. It takes 3 parameters: gid,
	pos and how.  This method changes the position of download denoted
	by gid.  If how is POS_SET, it moves the download to a position
	relative to the beginning of the queue.  If how is POS_CUR, it
	moves the download to a position relative to the current
	position. If how is POS_END, it moves the download to a position